# momapy_kb

./: .gitignore  README.md  pyproject.toml
src/momapy_kb/: neo4j.py  utils.py
src/momapy_kb/neo4j/: celldesigner.py  core.py  utils.py
src/momapy_kb/neo4j/sbgn/: pd.py
src/momapy_kb/neo4j/templates/: doc_neo4j.html  doc_ogm.html  node_classes_neo4j.html  node_classes_ogm.html
src/momapy_kb/templates/: node_classes_neo4j_model.html
src/momapy_kg/: builder.py  neo4j.py  sbgn.py  utils.py
src/momapy_kg/templates/: base.html  doc_neo4j_model.html  doc_neomodel.html  node_classes_neomodel.html  sidenav.html
tests/: Neuroinflammation.sbgn  poubelle.py  test.py  test.sbgn  test2.py  test_celldesigner.py  test_connection.py  test_dict.py  test_sbml.py
