[project]
name = "momapy_kb"
version = "0.1.0"
description = "Momapy maps to KB"
authors = [
    {name = "Adrien Rougny", email = "adrienrougny@gmail.com"},
]
dependencies = [
    "neomodel>=5.2.1",
    "inflect>=7.2.0",
    "colorama>=0.4.6",
    "jinja2>=3.1.3",
    "frozendict>=2.4.6",
    "momapy @ git+https://github.com/adrienrougny/momapy.git@metabolism_regulation",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

